Creado la graficas para componente y eveno.

--- a/python/Rastreador de componentes y eventos.ipynb
+++ b/python/Rastreador de componentes y eventos.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -67,17 +67,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "No se ha seleccionado un fichero JSON, se crea una nueva estructura de datos.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#Cargamos los componentes y eventos si se ha seleccionado fichero json\n",
     "\n",
@@ -102,20 +94,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Componente y evento con varias descripciones diferentes:\n",
-      "\tComponent:  System \tEvent: Course viewed \tDescriptions:  [\"The user with id '' viewed the course with id ''.\", \"The user with id '' viewed the section number '' of the course with id ''.\"]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for csvFile in csvFiles: #por cada fichero seleccionado, lo parsemamos uno a uno.\n",
     "    with open(csvFile,encoding='utf-8') as file:\n",
@@ -136,6 +119,7 @@
     "                if len(descriptions)>1:\n",
     "                    print(\"Componente y evento con varias descripciones diferentes:\")\n",
     "                    print(\"\\tComponent: \",component,\"\\tEvent:\",event,\"\\tDescriptions: \",descriptions)\n",
+    "                    print()\n",
     "            "
    ]
   },
@@ -143,24 +127,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Se guarda el resultado como fichero JSON\n"
+    "# Se guarda el resultado como fichero JSON\n",
+    "El resultado se guarda en el mismo fichero actualizándolo si se ha elegido, si no se crea uno nuevo llamado Componentes y eventos.json "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Guardado como JSON Componentes y eventos.json\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#Guardamos como JSON\n",
     "#mantenemos el nombre original del json y sino los llamamos componentes y eventos\n",
