--- a/resources/messages/Messages_en.properties
+++ b/resources/messages/Messages_en.properties
@@ -46,6 +46,7 @@ label.group=Group:
 label.rol=Rol:
 label.type=Type:
 label.filter=Filter...
+label.event=Event: 
 label.participants=Participants:
 label.categoryitem=Category/Item:
 label.component=Component: 
@@ -58,6 +59,8 @@ label.startdate=Start reference date:
 label.enddate=End reference date: 
 btn.filter=Apply filter
 tab.logs=Logs
+tab.component=Components
+tab.event=Events
 tab.grades=Grades
 choiceBox.DAY=Days
 choiceBox.YEAR=Years
