--- a/resources/messages/Messages_es.properties
+++ b/resources/messages/Messages_es.properties
@@ -48,6 +48,7 @@ label.group=Grupo:
 label.rol=Rol:
 label.type=Tipo:
 label.filter=Filtro...
+label.componentorevent=Componente\nEvento
 label.participants=Participantes:
 label.categoryitem=Categoría/Item:
 label.component=Componente: 
@@ -61,6 +62,8 @@ label.enddate=Fecha de referencia final:
 btn.filter=Aplicar filtro
 tab.logs=Registros
 tab.grades=Calificaciones
+tab.component=Componentes
+tab.event=Eventos
 choiceBox.DAY=Días
 choiceBox.YEAR=Años
 choiceBox.YEAR_WEEK=Semanas
@@ -127,127 +130,127 @@ component.WIKI=Wiki
 component.WORKSHOP=Taller
 component.XML_FILE=Fichero XML
 
-eventname.ACTIVITY_REPORT_VIEWED=Activity report viewed
-eventname.ADD_SUBMISSION=Add Submission
-eventname.ALL_THE_SUBMISSIONS_ARE_BEING_DOWNLOADED=All the submissions are being downloaded.
-eventname.AN_ONLINE_TEXT_HAS_BEEN_UPLOADED=An online text has been uploaded.
-eventname.ASSIGNMENT_OVERRIDE_CREATED=Assignment override created
-eventname.ASSIGNMENT_OVERRIDE_DELETED=Assignment override deleted
-eventname.ASSIGNMENT_OVERRIDE_UPDATED=Assignment override updated
-eventname.A_FILE_HAS_BEEN_UPLOADED=A file has been uploaded.
-eventname.A_SUBMISSION_HAS_BEEN_SUBMITTED=A submission has been submitted.
-eventname.BADGE_LISTING_VIEWED=Badge listing viewed
-eventname.CALENDAR_EVENT_CREATED=Calendar event created
-eventname.CALENDAR_EVENT_DELETED=Calendar event deleted
-eventname.CALENDAR_EVENT_UPDATED=Calendar event updated
-eventname.CHOICE_ANSWER_ADDED=Choice answer added
-eventname.CHOICE_REPORT_VIEWED=Choice report viewed
-eventname.COMMENT_CREATED=Comment created
-eventname.COMMENT_DELETED=Comment deleted
-eventname.COURSE_ACTIVITY_COMPLETION_UPDATED=Course activity completion updated
-eventname.COURSE_BACKUP_CREATED=Course backup created
-eventname.COURSE_CREATED=Course created
-eventname.COURSE_MODULE_CREATED=Course module created
-eventname.COURSE_MODULE_DELETED=Course module deleted
-eventname.COURSE_MODULE_INSTANCE_LIST_VIEWED=Course module instance list viewed
-eventname.COURSE_MODULE_UPDATED=Course module updated
-eventname.COURSE_MODULE_VIEWED=Course module viewed
-eventname.COURSE_RESET_ENDED=Course reset ended
-eventname.COURSE_RESET_STARTED=Course reset started
-eventname.COURSE_SEARCHED=Course searched
-eventname.COURSE_SECTION_CREATED=Course section created
-eventname.COURSE_SECTION_UPDATED=Course section updated
-eventname.COURSE_SUMMARY_VIEWED=Course summary viewed
-eventname.COURSE_UPDATED=Course updated
-eventname.COURSE_USER_REPORT_VIEWED=Course user report viewed
-eventname.COURSE_VIEWED=Course viewed
-eventname.DISCUSSION_CREATED=Discussion created
-eventname.DISCUSSION_DELETED=Discussion deleted
-eventname.DISCUSSION_MOVED=Discussion moved
-eventname.DISCUSSION_SUBSCRIPTION_CREATED=Discussion subscription created
-eventname.DISCUSSION_VIEWED=Discussion viewed
-eventname.ENROLMENT_INSTANCE_CREATED=Enrolment instance created
-eventname.ENTRY_HAS_BEEN_CREATED=Entry has been created
-eventname.ENTRY_HAS_BEEN_UPDATED=Entry has been updated
-eventname.ENTRY_HAS_BEEN_VIEWED=Entry has been viewed
-eventname.EVALUATION_SYSTEM_CREATED=Evaluation system created
-eventname.EVALUATION_SYSTEM_MODIFIED=Evaluation system modified
-eventname.FOLDER_UPDATED=Folder updated
-eventname.GRADER_REPORT_VIEWED=Grader report viewed
-eventname.GRADE_DELETED=Grade deleted
-eventname.GRADE_OUTCOMES_REPORT_VIEWED=Grade outcomes report viewed
-eventname.GRADE_OVERVIEW_REPORT_VIEWED=Grade overview report viewed
-eventname.GRADE_SINGLE_VIEW_REPORT_VIEWED=Grade single view report viewed.
-eventname.GRADE_USER_REPORT_VIEWED=Grade user report viewed
-eventname.GRADING_FORM_VIEWED=Grading form viewed
-eventname.GRADING_TABLE_VIEWED=Grading table viewed
-eventname.GROUPING_CREATED=Grouping created
-eventname.GROUP_CREATED=Group created
-eventname.GROUP_DELETED=Group deleted
-eventname.GROUP_MEMBER_ADDED=Group member added
-eventname.GROUP_MEMBER_REMOVED=Group member removed
-eventname.HOTPOT_ATTEMPT_STARTED=HotPot attempt started
-eventname.HOTPOT_ATTEMPT_SUBMITTED=HotPot attempt submitted
-eventname.ITEM_CREATED=Item created
-eventname.ITEM_DELETED=Item deleted
-eventname.LIST_SUBMISSIONS=List Submissions
-eventname.LIVE_LOG_REPORT_VIEWED=Live log report viewed
-eventname.LOG_REPORT_VIEWED=Log report viewed
-eventname.MESSAGE_SENT=Message sent
-eventname.OPENDOCUMENT_GRADE_EXPORTED=OpenDocument grade exported
-eventname.OUTLINE_REPORT_VIEWED=Outline report viewed
-eventname.OUTSTANDING_RATINGS_MODIFIED=Outstanding ratings modified
-eventname.PARTICIPATION_REPORT_VIEWED=Participation report viewed
-eventname.POST_CREATED=Post created
-eventname.POST_DELETED=Post deleted
-eventname.POST_UPDATED=Post updated
-eventname.QUESTION_CATEGORY_CREATED=Question category created
-eventname.QUESTION_MANUALLY_GRADED=Question manually graded
-eventname.QUIZ_ATTEMPT_ABANDONED=Quiz attempt abandoned
-eventname.QUIZ_ATTEMPT_PREVIEW_STARTED=Quiz attempt preview started
-eventname.QUIZ_ATTEMPT_REVIEWED=Quiz attempt reviewed
-eventname.QUIZ_ATTEMPT_STARTED=Quiz attempt started
-eventname.QUIZ_ATTEMPT_SUBMITTED=Quiz attempt submitted
-eventname.QUIZ_ATTEMPT_SUMMARY_VIEWED=Quiz attempt summary viewed
-eventname.QUIZ_ATTEMPT_TIME_LIMIT_EXCEEDED=Quiz attempt time limit exceeded
-eventname.QUIZ_ATTEMPT_VIEWED=Quiz attempt viewed
-eventname.QUIZ_EDIT_PAGE_VIEWED=Quiz edit page viewed
-eventname.QUIZ_OVERRIDE_CREATED=Quiz override created
-eventname.QUIZ_OVERRIDE_DELETED=Quiz override deleted
-eventname.QUIZ_REPORT_VIEWED=Quiz report viewed
-eventname.RECENT_ACTIVITY_VIEWED=Recent activity viewed
-eventname.RESPONSE_SUBMITTED=Response submitted
-eventname.ROLE_ASSIGNED=Role assigned
-eventname.ROLE_UNASSIGNED=Role unassigned
-eventname.SCALE_CREATED=Scale created
-eventname.SESSIONS_VIEWED=Sessions viewed
-eventname.SOME_CONTENT_HAS_BEEN_POSTED=Some content has been posted.
-eventname.STEP_SHOWN=Step shown
-eventname.SUBJECT_MODIFIED=Subject modified
-eventname.SUBMISSION_CONFIRMATION_FORM_VIEWED=Submission confirmation form viewed.
-eventname.SUBMISSION_CREATED=Submission created.
-eventname.SUBMISSION_FORM_VIEWED=Submission form viewed.
-eventname.SUBMISSION_UPDATED=Submission updated.
-eventname.THE_STATUS_OF_THE_SUBMISSION_HAS_BEEN_UPDATED=The status of the submission has been updated.
-eventname.THE_STATUS_OF_THE_SUBMISSION_HAS_BEEN_VIEWED=The status of the submission has been viewed.
-eventname.THE_SUBMISSIONS_HAVE_BEEN_LOCKED_FOR_A_USER=The submissions have been locked for a user.
-eventname.THE_SUBMISSIONS_HAVE_BEEN_UNLOCKED_FOR_A_USER=The submissions have been unlocked for a user.
-eventname.THE_SUBMISSION_HAS_BEEN_GRADED=The submission has been graded.
-eventname.THE_USER_HAS_ACCEPTED_THE_STATEMENT_OF_THE_SUBMISSION=The user has accepted the statement of the submission.
-eventname.TOUR_ENDED=Tour ended
-eventname.TOUR_STARTED=Tour started
-eventname.TXT_GRADE_EXPORTED=TXT grade exported
-eventname.UNIT_MODIFIED=Unit modified
-eventname.USER_ENROLLED_IN_COURSE=User enrolled in course
-eventname.USER_GRADED=User graded
-eventname.USER_LIST_VIEWED=User list viewed
-eventname.USER_LOG_REPORT_VIEWED=User log report viewed
-eventname.USER_PROFILE_VIEWED=User profile viewed
-eventname.USER_REPORT_VIEWED=User report viewed
-eventname.USER_UNENROLLED_FROM_COURSE=User unenrolled from course
-eventname.XLS_GRADE_EXPORTED=XLS grade exported
-eventname.XML_GRADE_EXPORTED=XML grade exported
-eventname.ZIP_ARCHIVE_OF_FOLDER_DOWNLOADED=Zip archive of folder downloaded
+eventname.ACTIVITY_REPORT_VIEWED = Informe de actividad visto
+eventname.ADD_SUBMISSION = Agregar entrega
+eventname.ALL_THE_SUBMISSIONS_ARE_BEING_DOWNLOADED = Todas las entregas están siendo descargadas.
+eventname.AN_ONLINE_TEXT_HAS_BEEN_UPLOADED = Se ha subido un texto en línea.
+eventname.ASSIGNMENT_OVERRIDE_CREATED = Anulación de asignación creada
+eventname.ASSIGNMENT_OVERRIDE_DELETED = Anulación de asignación eliminada
+eventname.ASSIGNMENT_OVERRIDE_UPDATED = Anulación de asignación actualizada
+eventname.A_FILE_HAS_BEEN_UPLOADED = Se ha subido un archivo.
+eventname.A_SUBMISSION_HAS_BEEN_SUBMITTED = Una presentación ha sido enviada.
+eventname.BADGE_LISTING_VIEWED = Listado de la insignia visto
+eventname.CALENDAR_EVENT_CREATED = Evento calendario creado
+eventname.CALENDAR_EVENT_DELETED = Evento del calendario eliminado
+eventname.CALENDAR_EVENT_UPDATED = Evento calendario actualizado
+eventname.CHOICE_ANSWER_ADDED = Respuesta de elección añadida
+eventname.CHOICE_REPORT_VIEWED = Informe de elección visto
+eventname.COMMENT_CREATED = Comentario creado
+eventname.COMMENT_DELETED = Comentario borrado
+eventname.COURSE_ACTIVITY_COMPLETION_UPDATED = Finalización de la actividad del curso actualizada.
+eventname.COURSE_BACKUP_CREATED = Copia de seguridad del curso creado
+eventname.COURSE_CREATED = Curso creado
+eventname.COURSE_MODULE_CREATED = Módulo de curso creado
+eventname.COURSE_MODULE_DELETED = Módulo de curso eliminado
+eventname.COURSE_MODULE_INSTANCE_LIST_VIEWED = Lista de instancias del módulo del curso vista
+eventname.COURSE_MODULE_UPDATED = Módulo de curso actualizado
+eventname.COURSE_MODULE_VIEWED = Módulo de curso visto
+eventname.COURSE_RESET_ENDED = Reinicio del curso finalizado
+eventname.COURSE_RESET_STARTED = Reinicio del curso iniciado
+eventname.COURSE_SEARCHED = Curso buscado
+eventname.COURSE_SECTION_CREATED = Sección del curso creado
+eventname.COURSE_SECTION_UPDATED = Sección del curso actualizada
+eventname.COURSE_SUMMARY_VIEWED = Resumen del curso visto
+eventname.COURSE_UPDATED = Curso actualizado
+eventname.COURSE_USER_REPORT_VIEWED = Informe del usuario del curso visto
+eventname.COURSE_VIEWED = Curso visto
+eventname.DISCUSSION_CREATED = Discusión creada
+eventname.DISCUSSION_DELETED = Discusión eliminada
+eventname.DISCUSSION_MOVED = Discusión movida
+eventname.DISCUSSION_SUBSCRIPTION_CREATED = Suscripción de discusión creada
+eventname.DISCUSSION_VIEWED = Discusión vista
+eventname.ENROLMENT_INSTANCE_CREATED = Instancia de inscripción creada
+eventname.ENTRY_HAS_BEEN_CREATED = Se ha creado la entrada.
+eventname.ENTRY_HAS_BEEN_UPDATED = La entrada ha sido actualizada.
+eventname.ENTRY_HAS_BEEN_VIEWED = Se ha visto la entrada.
+eventname.EVALUATION_SYSTEM_CREATED = Sistema de evaluación creado
+eventname.EVALUATION_SYSTEM_MODIFIED = Sistema de evaluación modificado.
+eventname.FOLDER_UPDATED = Carpeta actualizada
+eventname.GRADER_REPORT_VIEWED = Informe de nivelador visto
+eventname.GRADE_DELETED = Grado eliminado
+eventname.GRADE_OUTCOMES_REPORT_VIEWED = Informe de resultados de calificaciones visto
+eventname.GRADE_OVERVIEW_REPORT_VIEWED = Informe general del grado visto
+eventname.GRADE_SINGLE_VIEW_REPORT_VIEWED = Informe de vista única de grado visto.
+eventname.GRADE_USER_REPORT_VIEWED = Informe del usuario de grado visto
+eventname.GRADING_FORM_VIEWED = Forma de calificación vista
+eventname.GRADING_TABLE_VIEWED = Tabla de clasificación vista
+eventname.GROUPING_CREATED = Agrupación creada
+eventname.GROUP_CREATED = Grupo creado
+eventname.GROUP_DELETED = Grupo eliminado
+eventname.GROUP_MEMBER_ADDED = Miembro del grupo agregado
+eventname.GROUP_MEMBER_REMOVED = Miembro del grupo eliminado
+eventname.HOTPOT_ATTEMPT_STARTED = Intento de hotpot iniciado
+eventname.HOTPOT_ATTEMPT_SUBMITTED = HotPot intento enviado
+eventname.ITEM_CREATED = Artículo creado
+eventname.ITEM_DELETED = Elemento eliminado
+eventname.LIST_SUBMISSIONS = Enumerar las presentaciones
+eventname.LIVE_LOG_REPORT_VIEWED = Informe de registro en vivo visto
+eventname.LOG_REPORT_VIEWED = Informe de registro visto
+eventname.MESSAGE_SENT = Mensaje enviado
+eventname.OPENDOCUMENT_GRADE_EXPORTED = Grado de OpenDocument exportado
+eventname.OUTLINE_REPORT_VIEWED = Esquema de informe visto
+eventname.OUTSTANDING_RATINGS_MODIFIED = Calificaciones sobresalientes modificadas
+eventname.PARTICIPATION_REPORT_VIEWED = Informe de participación visto
+eventname.POST_CREATED = Mensaje creado
+eventname.POST_DELETED = Publicación eliminada
+eventname.POST_UPDATED = Publicación actualizada
+eventname.QUESTION_CATEGORY_CREATED = Categoría de pregunta creada
+eventname.QUESTION_MANUALLY_GRADED = Pregunta calificada manualmente
+eventname.QUIZ_ATTEMPT_ABANDONED = Prueba de intento abandonado
+eventname.QUIZ_ATTEMPT_PREVIEW_STARTED = La vista previa del intento de prueba comenzó
+eventname.QUIZ_ATTEMPT_REVIEWED = Prueba de intento revisado
+eventname.QUIZ_ATTEMPT_STARTED = El intento de prueba comenzó
+eventname.QUIZ_ATTEMPT_SUBMITTED = Prueba de intento enviado
+eventname.QUIZ_ATTEMPT_SUMMARY_VIEWED = Resumen del intento de prueba visto
+eventname.QUIZ_ATTEMPT_TIME_LIMIT_EXCEEDED = El límite de tiempo de intento de prueba superó
+eventname.QUIZ_ATTEMPT_VIEWED = Intento de prueba visto
+eventname.QUIZ_EDIT_PAGE_VIEWED = Página de edición de prueba vista
+eventname.QUIZ_OVERRIDE_CREATED = Anulación de la prueba creada
+eventname.QUIZ_OVERRIDE_DELETED = Anulación de la prueba eliminada
+eventname.QUIZ_REPORT_VIEWED = Informe de prueba visto
+eventname.RECENT_ACTIVITY_VIEWED = Actividad reciente vista
+eventname.RESPONSE_SUBMITTED = Respuesta enviada
+eventname.ROLE_ASSIGNED = Rol asignado
+eventname.ROLE_UNASSIGNED = Rol sin asignar
+eventname.SCALE_CREATED = Escala creada
+eventname.SESSIONS_VIEWED = Sesiones vistas
+eventname.SOME_CONTENT_HAS_BEEN_POSTED = Algún contenido ha sido publicado.
+eventname.STEP_SHOWN = Paso mostrado
+eventname.SUBJECT_MODIFIED = Sujeto modificado
+eventname.SUBMISSION_CONFIRMATION_FORM_VIEWED = Formulario de confirmación de presentación visto.
+eventname.SUBMISSION_CREATED = Sumisión creada.
+eventname.SUBMISSION_FORM_VIEWED = Formulario de envío visto.
+eventname.SUBMISSION_UPDATED = Envío actualizado.
+eventname.THE_STATUS_OF_THE_SUBMISSION_HAS_BEEN_UPDATED = El estado del envío ha sido actualizado.
+eventname.THE_STATUS_OF_THE_SUBMISSION_HAS_BEEN_VIEWED = El estado de la presentación ha sido visto.
+eventname.THE_SUBMISSIONS_HAVE_BEEN_LOCKED_FOR_A_USER = Los envíos han sido bloqueados para un usuario.
+eventname.THE_SUBMISSIONS_HAVE_BEEN_UNLOCKED_FOR_A_USER = Los envíos han sido desbloqueados para un usuario.
+eventname.THE_SUBMISSION_HAS_BEEN_GRADED = La presentación ha sido calificada.
+eventname.THE_USER_HAS_ACCEPTED_THE_STATEMENT_OF_THE_SUBMISSION = El usuario ha aceptado la declaración del envío.
+eventname.TOUR_ENDED = El tour terminó
+eventname.TOUR_STARTED = Gira iniciada
+eventname.TXT_GRADE_EXPORTED = Grado TXT exportado
+eventname.UNIT_MODIFIED = Unidad modificada
+eventname.USER_ENROLLED_IN_COURSE = Usuario matriculado en curso
+eventname.USER_GRADED = Usuario calificado
+eventname.USER_LIST_VIEWED = Lista de usuarios vistos
+eventname.USER_LOG_REPORT_VIEWED = Informe de registro de usuario visto
+eventname.USER_PROFILE_VIEWED = Perfil de usuario visto
+eventname.USER_REPORT_VIEWED = Informe de usuario visto
+eventname.USER_UNENROLLED_FROM_COURSE = Usuario no inscrito en el curso
+eventname.XLS_GRADE_EXPORTED = Grado XLS exportado
+eventname.XML_GRADE_EXPORTED = Grado XML exportado
+eventname.ZIP_ARCHIVE_OF_FOLDER_DOWNLOADED = Archivo zip de la carpeta descargada
 
 
 
